<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Sascha Kohlmann. All rights reserved.
  ~ DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">GBC Ball Counter</string>
    <string name="startstop">Start</string>
    <string name="reset">Reset</string>
    <string name="balls_per_second_title">BPS</string>
    <string name="ball_count">Balls passed</string>
    <string name="duration">Duration</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ball_value">%1$d</string>
    <string name="image_format_not_supported">Image format (%1$s/%2$d) not supported.</string>

    <string name="action_show_preferences">Settings</string>
    <string name="action_show_governance">License</string>
    <string name="license_text">
        &lt;h1>Main license&lt;/h1>
        &lt;p>GBC Ball Counter to count passing Lego&#174; balls.&lt;/p>
        &lt;p>Copyright (C) 2016 Sascha Kohlmann&lt;/p>

        &lt;p>This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.&lt;/p>

        &lt;p>This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.&lt;/p>

        &lt;p>You should have received a copy of the GNU General Public License
        along with this program. If not, see
        &lt;a href="http://www.gnu.org/licenses/gpl-3.0.html">http://www.gnu.org/licenses/gpl-3.0.html&lt;/a>.&lt;/p>
        &lt;h2>Other licenses&lt;/h2>
        &lt;p>Parts of the program are taken from the The Android Open Source Project and are
        licensed under the terms of the
        &lt;a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2 license&lt;/a>.
        See &lt;a href="https://github.com/skohlmann/GBC-Ball-Counter">source code&lt;/a>
        for more information.&lt;/p>
        &lt;h2>Artwork&lt;/h2>
        &lt;p>Parts of the GBC Ball Counter icon are designed by different contributors:&lt;/p>

        &lt;p>&lt;a href="https://commons.wikimedia.org/wiki/File:Soccerball.svg">Football/Soccerball&lt;/a>:
        Taken from Wikimedia Commons. Made available under the
        &lt;a href="https://creativecommons.org/publicdomain/zero/1.0/deed.en">Creative Commons CC0 1.0 Universal Public Domain Dedication&lt;/a>.&lt;/p>

        &lt;p>&lt;a href="https://openclipart.org/detail/4667/basketball">Basketball&lt;/a>:
        Taken from &lt;a href="https://openclipart.org/">Open Clipart&lt;/a>. Made available as
        &lt;a href="https://openclipart.org/share">Public Domain&lt;/a>
        by &lt;a href="https://openclipart.org/user-detail/Gioppino">Gioppino&lt;/a>.&lt;/p>

        &lt;h1>Source code&lt;/h1>
        &lt;/p>Find the source code on Github at
        &lt;a href="https://github.com/skohlmann/GBC-Ball-Counter">https://github.com/skohlmann/GBC-Ball-Counter&lt;/a>.&lt;/p>
    </string>
    <string name="core_settings">Core Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="capture_delay">Capture delay</string>
    <string name="capture_delay_summary">Duration in milliseconds between capturing two images to check for passing balls.</string>

    <string name="first_scan_background_contrast_strategy_settings">First scan background contrast strategy</string>
    <string name="capture_delay_after_detection">Capture delay after ball detection</string>
    <string name="capture_delay_after_detection_summary">Duration in milliseconds between capturing the next image after detecting a ball.</string>

    <string name="luminance_difference_title">Brightness difference</string>
    <string name="luminance_difference_summary_android50">The difference of the brightness between foreground and background to detected a ball.</string>
    <string name="luminance_difference_summary_android51">The difference of the brightness between foreground and background to detected a white ball.</string>

    <string name="minimum_difference_title">Minimum difference in percent</string>
    <string name="minimum_difference_summary">Minimum value in percent of detected changes to signal a passing ball.</string>

    <string name="white_ball_support">Ball group contains white balls (e.g. soccer balls)?</string>
    <string name="white_ball_support_summary_off">No white balls in ball group.</string>
    <string name="white_ball_support_summary_on">Ball group contains white balls.\n\nWARNING: this may increase false-positive ball counts.</string>

    <string name="chrominance_minimum_difference_title">Color difference</string>
    <string name="chrominance_minimum_difference_summary">The minimum color difference between the background color and the foreground color to detect a colored ball.</string>

    <string name="android_50_compatibility_title">Android 5.0 (Lollipop) detection mode</string>
    <string name="android_50_compatibility_summary_off">Brightness only based ball detection mode for Android 5.0 is not in use (default).</string>
    <string name="android_50_compatibility_summary_on">Android 5.0 brightness only based ball detection mode is in use (not default). Switch on "Ball group contains white balls (e.g. soccer balls)?" to change minimum brightness difference.\n\nWARNING: this may increase false-positive ball counts. Color detection has no effect.</string>

</resources>
