<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Sascha Kohlmann. All rights reserved.
  ~ DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:sbp="http://schemas.android.com/apk/res/de.speexx.lego.gbc.ballcounter">

    <de.speexx.lego.gbc.ballcounter.SeekBarPreference
        android:title="@string/capture_delay_after_detection"
        android:summary="@string/capture_delay_after_detection_summary"
        android:key="capture_delay"
        android:persistent="true"
        android:defaultValue="150"
        sbp:minValue="25"
        sbp:maxValue="1000" />

    <de.speexx.lego.gbc.ballcounter.SeekBarPreference
        android:title="@string/minimum_difference_title"
        android:summary="@string/minimum_difference_summary"
        android:key="minimum_difference_percent"
        android:defaultValue="5"
        sbp:minValue="1"
        sbp:maxValue="100" />

    <de.speexx.lego.gbc.ballcounter.SeekBarPreference
        android:title="@string/luminance_difference_title"
        android:summary="@string/luminance_difference_summary_android50"
        android:key="brightness_difference"
        android:defaultValue="60"
        sbp:minValue="10"
        sbp:maxValue="200" />

</PreferenceScreen>
